plugins {
    id "java"
    id "application"
    id "eclipse"
    id "jacoco"
    id "org.sonarqube" version "4.4.1.3373"
    id "com.autonomousapps.dependency-analysis"  version "0.79.0"
}

repositories {
    mavenCentral()
    google()
}

jacoco {
    applyTo run
}

dependencies {
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.jgrapht:jgrapht-core:1.5.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

mainClassName = 'se.anders_raberg.adventofcode2023.DaysMain'

applicationDistribution.from("$projectDir/inputs") {
    into "inputs"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
test {
	useJUnitPlatform()
}
